<resources>
    <string name="app_name">DiscreetLearning</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="regstrate">¡Regístrate!</string>
    <string name="en">Entrar</string>
    <string name="entrar">Entrar</string>
    <string name="entra">Entrar</string>
    <string name="entr">Entrar</string>
    <string name="ent">Entrar</string>
</resources>
