<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logindlearning"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="293dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:textColorHint="#E0FFFF" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="211dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="212dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_passw"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#E0FFFF" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:background="#00000000"
        android:drawableBottom="#00000000"
        android:text="@string/regstrate"
        android:textColor="#fff"
        android:textColorLink="@android:color/transparent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="269dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:background="#00000000"
        android:text="@string/en"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>