<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/temas">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="81dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="384dp"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:background="@drawable/conocimientospre"/>

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="154dp"
        android:elevation="10dp"
        android:text="@string/ent"
        android:textColor="#fff"
        android:backgroundTint="#FF4F4F"
        android:onClick="conoPrevios"/>

    <View
        android:id="@+id/view2"
        android:layout_width="384dp"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:background="@drawable/tiposrelaciones" />

    <View
        android:id="@+id/view3"
        android:layout_width="384dp"
        android:layout_height="81dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="256dp"
        android:background="@drawable/propiedades" />

    <View
        android:id="@+id/view4"
        android:layout_width="384dp"
        android:layout_height="81dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"
        android:background="@drawable/clasificacion" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="246dp"
        android:elevation="10dp"
        android:text="@string/entrar"
        android:textColor="#fff"
        android:backgroundTint="#5CB4FE"
        android:onClick="tipRelaciones"/>

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="271dp"
        android:elevation="10dp"
        android:text="@string/entra"
        android:textColor="#fff"
        android:backgroundTint="#A056F3"
        android:onClick="proRelaciones"/>

    <Button
        android:id="@+id/button6"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="178dp"
        android:elevation="10dp"
        android:text="@string/entr"
        android:textColor="#fff"
        android:backgroundTint="#78DF45"
        android:onClick="claRelaciones"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/perfilbutton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="64dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button7"
        android:layout_marginEnd="66dp"
        android:background="@drawable/apuntesbutton" />

</RelativeLayout>